--- a/AshishPortfolio.html
+++ b/AshishPortfolio.html
@@ -51,7 +51,7 @@
                 <div class="col-md-6">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h5 class="card-title"><a href="calculatorOrigana.html">Calculator App</a></h5>
+                            <h5 class="card-title"><a href="calculatorOriganal.html">Calculator App</a></h5>
                             <p class="card-text">A simple calculator built with C programming.</p>
                         </div>
                     </div>
@@ -130,4 +130,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
