--- a/AshishPortfolio.html
+++ b/AshishPortfolio.html
@@ -10,7 +10,7 @@
     <!-- Navbar -->
        <!-- Navbar -->
        <nav class="navbar">
-        <a href="#home" class="logo"><img src="ashish kumarp.jpg" alt="profileP" class="profile" style="width: 40px;margin-right: 14px;"> Ashish Kumar</a>
+        <a href="#home" class="logo"><img src="ashish photo.png" alt="profileP" class="profile" style="width: 40px;margin-right: 14px;"> Ashish Kumar</a>
         <div class="hamburger" id="hamburger">
             <span></span>
             <span></span>
@@ -28,7 +28,7 @@
     <!-- Hero Section -->
     <section class="hero py-5 text-center" id="hero">
         <div class="container">
-            <img src="ashish photo.png" alt="Ashish Kumar Profile" class="rounded-circle mb-3" style="width: 150px; height: 150px; border-radius: 50%;">
+            <img src="ashish dp.jpg" alt="Ashish Kumar Profile" class="rounded-circle mb-3" style="width: 150px; height: 150px; border-radius: 50%;">
             <h1 class="display-4">Ashish Kumar</h1>
             <p class="lead">I am a BCA student passionate about coding, gaming, and cricket. I aspire to become a successful Software Developer.</p>
             <p><strong>Technical Skills:</strong> C, C++, DSA, OOPS, HTML, CSS</p>
@@ -130,5 +130,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
